Online_Resume/Content/Main.css
body {
    padding-top: 0px;
    padding-bottom: 0px;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}



.header-bar {
    background-color: rgb(45, 48, 51);
    padding-top: 8px;
    padding-bottom: 4px;
    min-width: 1050px;
}

.header-bar a {
  float:right;
  color: #00b0ff;
  font-size: 12px;
  font-weight: bold;
  margin-right:40px;
  text-transform: uppercase;

}


.jumbotron {
    background-image: url('../Pictures/Banner_Image6.png');
    height: 250px;
    background-repeat: no-repeat;
    background-size: cover;
    margin-bottom: 0px;
    min-width:1050px;
}

.jumbotron .container {
  position: relative;
  top:100px;
}

.jumbotron h1 {
  color: #fff;
  font-size: 48px;  
  font-weight: bold;
  margin-bottom:10px;
  margin-top:80px;
}


.jumbotron p {
  font-size: 20px;
  color: #fff;
}

.page-width {
    background-color: rgb(220,226,234);
    padding-bottom: 0px;
}

.info li {
    font-size: 17px;
    font-family: sans-serif;
}


.pull-right {
    margin-bottom: 0px;
}


.Education img {
    height: 40px;
    width: 40px;
    
}

.documentlogo  {
    height: 20px;
    width: 20px;
}

ul.CPA {
    padding-left:20px;
   text-indent:2px;
   list-style: none;
   list-style-position:outside;
}


 .CPA li:before {
     content: "\2714" ;
     font-size: large;
     color: LimeGreen;   
     margin-left: -1em; margin-right: 5px;

 }

.skills li {
    color: #F7F7F7;
    font: bold 12px/23px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
    margin-bottom: 2px;
    padding: 2px 10px;
    border-radius: 10px;
    width:100%;

}

p{
    font-family: sans-serif;
    font-size: 16px;
}

.skill_level {
    float: right;
}

ul.skills{
    padding-left: 0px;
    list-style: none;
    width: 65%;
}

img#headshot {
    float: right;
    margin-right: 87px;
    border-radius: 6px;
}


#footer {
    text-align: center;
    font-weight: bolder;
    padding-top: 15px;
    padding-bottom: 20px;
    border-top: 1px solid gainsboro; 
    background-color: rgb(45,48,51);
    color: rgb(111,111,111);
    min-width: 1050px;
}

#footer p{
    margin-bottom: 0px;
}

#footer a{
    color: rgb(111,111,111)
}

#footer a:hover{
    color: #00b0ff;
    text-decoration:none;
}


.Competencies container{
    padding-left:0px;
}

.Competencies col-sm-6 {
    padding-left:0px;
}


#nav li.current-menu-item a {
    color: #00b0ff;
    text-decoration: none;
}

.img-thumbnail {
    max-width: 80%;
}

.quote {
    font-style: italic;
}

.AutoResto {
    margin-left:135px;
}

.excel_vid {
    background-color:green;
   
}

.vidIMG {
    width: 100%;
    opacity: 1;
    -webkit-transition: opacity .5s;
    -moz-transition: opacity .5s;
    transition: opacity .5s;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.vidIMG:hover {
        opacity: .5;
}

 .playbtn:hover {
        background-image: url('../Pictures/play_button2.png');
         background-repeat : no-repeat;
         background-position: 30% 50%;
}


  .media-body
  {
      padding-left:30px;
  }

  .media {
      margin-top: 35px;
  }

  b, strong {
    color: #2787e6;
}

a:focus {
    text-decoration: none;
}

.page-width .content-container {
    background-image: url('../Pictures/Lmap4.png');
    max-width: 1406px;
    min-width: 800px;
    min-height: 1000px;
    border-radius: 10px;
    padding-right: 15px;
    padding-left: 15px;
    margin: 0 auto;
    float: none;
}

#content { 
    padding-top:25px;
    padding-left: 25px;
    min-height:1000px;
}


.info .container {
    background-color: white;
    padding-left: 0px;
    padding-right: 0px;
}

.accordian .container {
    padding-left: 5px;
}


.page-background {
    margin-right: 250px;
    margin-left: 250px;
}

.nav_menu {
    float:left;
    height: 542px;
    background-image: url('../Pictures/nav_menu.png');
}

.nav_menu ul {
    list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" width="45" height="45"><circle fill="white" cx="5" cy="5" r="2"/></svg>');
    padding-left: 85px;
    padding-top: 80px;
    font-size: 22px;
}

.nav_menu li:not(.active) {
    opacity: .65;
}

.nav_menu ul:hover {
    opacity: 1;
}


.nav_menu li a{
        color: black;
        text-decoration:none;
    }


.nav_menu li.active a {
    color: white;
}

.nav_menu li.active span.nav_span{
    background-color: black;
    padding: 5px;
    border-radius: 10px;
}

.nav_menu li a:hover:not(.active){
    font-style: italic;
    font-weight:bold;
}

#Charger_Main {
    display:block;
    margin:auto;
}

button.site_button {
    color: #ffffff;
    background-color: #181818;
    width: 100%;
    border:none;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    padding: 0px;
    margin-bottom: 40px;
}

button.site_button:hover {
    opacity: .5;
}

button.site_button:focus {
    outline: none;
}

.arrow:after {
content: '\25B2';

}


.site_button.site_button.collapsed .arrow:after{
    content: '\25BC';
}


button#lodging{
    background-color: rgb(19,37,147);
}


button#Auto{
    background-color: rgb(255,255,255);
}


button#Auto .arrow{
    color: red;
}

img#Exelon_logo {
    padding-bottom: 10px;
}

.footer_logo{
    margin-top:4px;
}

#txt_overlay{
    position: absolute;
    background:rgb(111,111,111);
    color:white;
    left: 45%;
    opacity: .9;
    border-radius:5px;
    font-size: 28px;
    top:1px;
    padding:5px;
}

div.Charger_Main_container{
    position:relative;
    height: 585px;
    width: 780px;
    display:block;
    margin:auto;
}


hr {
    border-top: 1px solid rgba(119,119,119,0.54);
   
}

#RaspiPic {
    border: solid 1px;
    border-color: plum;
}

h4 b {
    color:black;
}


/* entire container, keeps perspective */
.flip-container {
    position: relative;
    padding-bottom: 300px;
    margin-bottom: 50px;
}

.flip-container .flipper {
    transform-origin: 100% 122.5px; /* half of height */
}

.flip-container:hover .flipper {
    transform: rotateX(-180deg);
}

.flip-container, .front, .back {
    width: 100%;
    
}

/* flip speed goes here */
.flipper {
    transition: 0.6s;
    transform-style: preserve-3d;
    position: relative;
}

/* hide back of pane during swap */
.front, .back {
    backface-visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
}

/* front pane, placed above back */
.front {
    z-index: 2;
    /* for firefox 31 */
    transform: rotateX(0deg);
}

/* back, initially hidden pane */
.back {
    transform: rotateX(180deg);
}

img.play_float_right {
    float: right;
    margin-right: 50%;
    opacity: 1;
    -webkit-transition: opacity .5s;
    -moz-transition: opacity .5s;
    transition: opacity .5s;
}

img.play_float_right:hover {
    opacity: .5;
}

